refs #2834 should fix some characters are sometimes not completely visible, for instance a "g"

--- a/plugins/Morpheus/stylesheets/theme.less
+++ b/plugins/Morpheus/stylesheets/theme.less
@@ -408,9 +408,12 @@ table.dataTable {
     tr {
         td {
             border-color: @silver-80 !important;
-            .font-default(13px, 16px);
             color: @brand-black;
             background: @silver-95;
+
+            .value {
+              .font-default(13px, 16px);
+            }
 
             &:first-child {
                 border-left: 0px;
